--- a/src/scss/customers.scss
+++ b/src/scss/customers.scss
@@ -30,7 +30,6 @@
   display: flex;
   height: 140px;
   justify-content: center;
-  margin: 0 1.5rem 2rem 0;
   width: 257px;
 }
 
